test/libhyperion/syntaxTests/functionTypes/function_type_returned.hyp
contract C {
    function f() public pure returns (function(uint) pure external returns (uint) g) {
        return g;
    }
}
// ----
// TypeError 4889: (51-96): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
